--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ exceptiongroup==1.1.1
 fastapi==0.99.0
 filelock==3.12.2
 flake8==6.0.0
+greenlet==2.0.2
 h11==0.14.0
 httpcore==0.17.2
 httptools==0.5.0
@@ -29,6 +30,7 @@ pathspec==0.11.1
 platformdirs==3.8.0
 pluggy==1.2.0
 pre-commit==3.3.3
+psycopg2-binary==2.9.6
 pycodestyle==2.10.0
 pydantic==1.10.10
 pyflakes==3.0.1
@@ -37,6 +39,7 @@ python-dotenv==1.0.0
 python-multipart==0.0.6
 PyYAML==6.0
 sniffio==1.3.0
+SQLAlchemy==2.0.17
 starlette==0.27.0
 tomli==2.0.1
 typing_extensions==4.7.0
