--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,24 @@
+aiohttp==3.8.4
+aiosignal==1.3.1
 anyio==3.7.0
+async-timeout==4.0.2
+attrs==23.1.0
 black==23.3.0
 certifi==2023.5.7
+cffi==1.15.1
 cfgv==3.3.1
+charset-normalizer==3.1.0
 click==8.1.3
+cryptography==41.0.1
 distlib==0.3.6
 dnspython==2.3.0
+ecdsa==0.18.0
 email-validator==2.0.0.post2
 exceptiongroup==1.1.1
 fastapi==0.99.0
 filelock==3.12.2
 flake8==6.0.0
+frozenlist==1.3.3
 greenlet==2.0.2
 h11==0.14.0
 httpcore==0.17.2
@@ -22,8 +31,10 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 mccabe==0.7.0
+multidict==6.0.4
 mypy-extensions==1.0.0
 nodeenv==1.8.0
+openai==0.27.8
 orjson==3.9.1
 packaging==23.1
 pathspec==0.11.1
@@ -31,21 +42,30 @@ platformdirs==3.8.0
 pluggy==1.2.0
 pre-commit==3.3.3
 psycopg2-binary==2.9.6
+pyasn1==0.5.0
 pycodestyle==2.10.0
+pycparser==2.21
 pydantic==1.10.10
 pyflakes==3.0.1
 pytest==7.4.0
 python-dotenv==1.0.0
+python-jose==3.3.0
 python-multipart==0.0.6
 PyYAML==6.0
+requests==2.31.0
+rsa==4.9
+six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.17
 starlette==0.27.0
 tomli==2.0.1
+tqdm==4.65.0
 typing_extensions==4.7.0
 ujson==5.8.0
+urllib3==2.0.3
 uvicorn==0.22.0
 uvloop==0.17.0
 virtualenv==20.23.1
 watchfiles==0.19.0
 websockets==11.0.3
+yarl==1.9.2
